vlib/v/checker/tests/globals/incorrect_name_global.vv
__global A int = 1
